# NovaNet

./: .clangd  .gitignore  CMakeLists.txt  README.md
examples/phase1/: epoll_echo_server.cpp
examples/phase2/: reactor_echo_server.cpp
include/novanet/base/: Logger.h
include/novanet/net/: Acceptor.h  Buffer.h  Channel.h  Endian.h  EventLoop.h  InetAddress.h  Poller.h  Socket.h  SocketsOps.h
src/net/: Acceptor.cpp  Channel.cpp  EventLoop.cpp  InetAddress.cpp  Poller.cpp  Socket.cpp  SocketsOps.cpp
testpy/: bad_client.py  test1000.py  test_EMFILE.py  test_sticky.py
tests/: bench_client.cpp  pingpong.py  test_phase1.md
tests/phase_1/: latency_test.py  test.py  test_half.py
tests/phase_2/: EMFILE.py  SIGPIPE.py  test.out  test_acceptor  test_acceptor.cpp  test_burst.py  test_disconnection.py  test_multi.py  test_reactor  test_reactor.cpp
tests/phase_2/testBuffer/: BufferTest.cpp  test_buffer  test_buffer.cpp  test_buffer1  test_buffer1.cpp
